kubernetes/infrastructure/ntfy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ntfy
  labels:
    app.kubernetes.io/name: ntfy
